[gd_scene load_steps=3 format=3 uid="uid://dvjlkpjvjxn0h"]

[ext_resource type="Script" path="res://mic_record.gd" id="1_6uo4j"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[node name="MicRecord" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -224.0
offset_right = 296.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6uo4j")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("1")
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="RecordButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -20.0
offset_right = 65.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Record"

[connection signal="button_down" from="RecordButton" to="." method="_on_record_button_down"]
[connection signal="button_up" from="RecordButton" to="." method="_on_record_button_up"]
